--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
     "multer": "^2.0.2",
+    "node-cron": "^3.0.3",
     "openai": "^4.28.0",
+    "p-limit": "^2.3.0",
     "sharp": "^0.34.5",
     "socket.io": "^4.8.3"
   },
@@ -35,6 +37,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^2.0.0",
     "@types/node": "^25.0.3",
+    "@types/node-cron": "^3.0.11",
     "@types/socket.io": "^3.0.1",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
