feat: Introduce Redis service and migrate rate limiter to use Redis, adding Docker Compose configuration.

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,14 @@ TMDB_API_KEY=your-tmdb-api-key
 # OpenAI API (for AI recommendations & Mood Chart)
 # Get your API key at: https://platform.openai.com/api-keys
 OPENAI_API_KEY=your-openai-api-key
+
+# ===========================================
+# Redis Configuration (Docker Compose)
+# ===========================================
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=cinetrack_redis_secret
+
+# Redis Commander GUI (optional)
+REDIS_GUI_USER=admin
+REDIS_GUI_PASSWORD=admin123
