--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.8.4",
     "multer": "^2.0.2",
     "node-cron": "^3.0.3",
+    "ioredis": "^5.4.1",
     "openai": "^4.28.0",
     "p-limit": "^2.3.0",
     "sharp": "^0.34.5",
