--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.66.4",
     "canvas-confetti": "^1.9.4",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
